[gd_scene load_steps=10 format=3 uid="uid://cc13e3o40cveo"]

[ext_resource type="Script" uid="uid://cio6wjckw08ao" path="res://scenes/obstaculos/cube.gd" id="1_fqpox"]
[ext_resource type="Texture2D" uid="uid://cr5joctx4ql6a" path="res://assets/environment/Tile_set1.png" id="1_wgndh"]
[ext_resource type="AudioStream" uid="uid://df5cocbcnmkbe" path="res://assets/sfx/explosion.ogg" id="3_hws4f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jwrs"]
size = Vector2(57.5, 57.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqpox"]
atlas = ExtResource("1_wgndh")
region = Rect2(193.289, 124.615, 64.5159, 64.1061)

[sub_resource type="Animation" id="Animation_hws4f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_eh1wb"]
resource_name = "shake"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.139626, 0.139626, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, -1), Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t1u4b"]
_data = {
&"RESET": SubResource("Animation_hws4f"),
&"shake": SubResource("Animation_eh1wb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_eh1wb"]

[node name="Cube" type="StaticBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_fqpox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.25, 2.25)
shape = SubResource("RectangleShape2D_4jwrs")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["cubos"]]
scale = Vector2(0.666957, 0.680329)
texture = SubResource("AtlasTexture_fqpox")

[node name="raycasts_colisões" type="Node2D" parent="."]

[node name="RayCast2D_down" type="RayCast2D" parent="raycasts_colisões"]
unique_name_in_owner = true
collide_with_areas = true

[node name="RayCast2D_left" type="RayCast2D" parent="raycasts_colisões"]
unique_name_in_owner = true
rotation = 1.5708
collide_with_areas = true

[node name="RayCast2D_up" type="RayCast2D" parent="raycasts_colisões"]
unique_name_in_owner = true
rotation = 3.14159
collide_with_areas = true

[node name="RayCast2D_right" type="RayCast2D" parent="raycasts_colisões"]
unique_name_in_owner = true
rotation = -1.5708
collide_with_areas = true

[node name="raycasts_push" type="Node2D" parent="."]
visible = false

[node name="RayCast2D_down_p" type="RayCast2D" parent="raycasts_push"]
unique_name_in_owner = true
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D_left_p" type="RayCast2D" parent="raycasts_push"]
unique_name_in_owner = true
rotation = 1.5708
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D_up_p" type="RayCast2D" parent="raycasts_push"]
unique_name_in_owner = true
rotation = 3.14159
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D_right_p" type="RayCast2D" parent="raycasts_push"]
unique_name_in_owner = true
rotation = -1.5708
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="movement_timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_t1u4b")
}

[node name="button_detector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="button_detector"]
shape = SubResource("CircleShape2D_eh1wb")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_hws4f")

[node name="sfx_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="movement_timer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="sfx_timer" to="." method="_on_sfx_timer_timeout"]
